Refactor import paths for region components and update localization strings for user and region forms

--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -37,5 +37,65 @@
     "register.address.valid": "Address must be a valid string",
     "register.coordinates.valid": "Coordinates must be an array of two numbers",
     "register.coordinates.latitude.required": "Please enter the latitude",
-    "register.coordinates.longitude.required": "Please enter the longitude"
+    "register.coordinates.longitude.required": "Please enter the longitude",
+    "updateUser.name": "Name",
+    "updateUser.address": "Address",
+    "updateUser.coordinates": "Coordinates",
+    "updateUser.latitude": "Latitude",
+    "updateUser.longitude": "Longitude",
+    "updateUser.submit": "Update User",
+    "updateUser.success": "Update Successful",
+    "updateUser.success.description": "User information has been updated successfully.",
+    "updateUser.name.required": "Please enter your name",
+    "updateUser.address.valid": "Address must be a valid string",
+    "updateUser.coordinates.valid": "Coordinates must be an array of two numbers",
+    "updateUser.coordinates.latitude.required": "Please enter the latitude",
+    "updateUser.coordinates.longitude.required": "Please enter the longitude",
+    "region.name": "Name",
+    "region.type": "Type",
+    "region.coordinates": "Coordinates",
+    "region.latitude": "Latitude",
+    "region.longitude": "Longitude",
+    "region.submit": "Submit",
+    "region.success": "Region Created",
+    "region.success.description": "The region has been created successfully.",
+    "region.name.required": "Please enter the region name",
+    "region.type.required": "Please enter the region type",
+    "region.coordinates.valid": "Coordinates must be an array of arrays of two numbers",
+    "region.coordinates.latitude.required": "Please enter the latitude",
+    "region.coordinates.longitude.required": "Please enter the longitude",
+    "region.list": "Region List",
+    "region.details": "Region Details",
+    "region.fetchError": "Fetch Error",
+    "region.fetchError.description": "There was an error fetching the regions.",
+    "updateRegion.name": "Name",
+    "updateRegion.type": "Type",
+    "updateRegion.coordinates": "Coordinates",
+    "updateRegion.latitude": "Latitude",
+    "updateRegion.longitude": "Longitude",
+    "updateRegion.submit": "Update Region",
+    "updateRegion.success": "Update Successful",
+    "updateRegion.success.description": "The region has been updated successfully.",
+    "updateRegion.name.required": "Please enter the region name",
+    "updateRegion.type.required": "Please enter the region type",
+    "updateRegion.coordinates.valid": "Coordinates must be an array of arrays of two numbers",
+    "updateRegion.coordinates.latitude.required": "Please enter the latitude",
+    "updateRegion.coordinates.longitude.required": "Please enter the longitude",
+    "geoDistance.lat": "Latitude",
+    "geoDistance.lng": "Longitude",
+    "geoDistance.maxDistance": "Max Distance",
+    "geoDistance.filterUserId": "Filter User ID",
+    "geoDistance.submit": "Submit",
+    "geoDistance.success": "Request Successful",
+    "geoDistance.success.description": "The request has been processed successfully.",
+    "geoDistance.lat.required": "Please enter the latitude",
+    "geoDistance.lng.required": "Please enter the longitude",
+    "geoDistance.maxDistance.required": "Please enter the max distance",
+    "geoPoint.lat": "Latitude",
+    "geoPoint.lng": "Longitude",
+    "geoPoint.submit": "Submit",
+    "geoPoint.success": "Request Successful",
+    "geoPoint.success.description": "The request has been processed successfully.",
+    "geoPoint.lat.required": "Please enter the latitude",
+    "geoPoint.lng.required": "Please enter the longitude"
 }
