Add Brazilian Portuguese translations for authentication and user management

--- a/frontend/src/locales/pt.json
+++ b/frontend/src/locales/pt.json
@@ -1,101 +1,101 @@
 {
-    "footer.language": "Select Language",
+    "footer.language": "Selecionar Idioma",
     "login.email": "Email",
-    "login.password": "Password",
-    "login.submit": "Login",
-    "login.register": "Register",
-    "login.success": "Login Successful",
-    "login.failed": "Login Failed",
-    "login.success.description": "You have been logged in successfully.",
-    "changePassword.newPassword": "New Password",
-    "changePassword.confirmNewPassword": "Confirm New Password",
-    "changePassword.submit": "Change Password",
-    "changePassword.success": "Password Changed",
-    "changePassword.success.description": "Your password has been successfully updated.",
-    "changePassword.newPassword.required": "Please enter a new password",
-    "changePassword.newPassword.min": "Password must be at least 6 characters",
-    "changePassword.confirmNewPassword.required": "Please confirm your new password",
-    "changePassword.confirmNewPassword.match": "Passwords do not match!",
-    "register.name": "Name",
+    "login.password": "Senha",
+    "login.submit": "Entrar",
+    "login.register": "Registrar",
+    "login.success": "Login Realizado com Sucesso",
+    "login.failed": "Falha no Login",
+    "login.success.description": "Você fez login com sucesso.",
+    "changePassword.newPassword": "Nova Senha",
+    "changePassword.confirmNewPassword": "Confirmar Nova Senha",
+    "changePassword.submit": "Alterar Senha",
+    "changePassword.success": "Senha Alterada",
+    "changePassword.success.description": "Sua senha foi atualizada com sucesso.",
+    "changePassword.newPassword.required": "Por favor, insira uma nova senha",
+    "changePassword.newPassword.min": "A senha deve ter pelo menos 6 caracteres",
+    "changePassword.confirmNewPassword.required": "Por favor, confirme sua nova senha",
+    "changePassword.confirmNewPassword.match": "As senhas não coincidem!",
+    "register.name": "Nome",
     "register.email": "Email",
-    "register.password": "Password",
-    "register.confirmPassword": "Confirm Password",
-    "register.address": "Address (Optional)",
-    "register.coordinates": "Coordinates (Optional)",
+    "register.password": "Senha",
+    "register.confirmPassword": "Confirmar Senha",
+    "register.address": "Endereço (Opcional)",
+    "register.coordinates": "Coordenadas (Opcional)",
     "register.latitude": "Latitude",
     "register.longitude": "Longitude",
-    "register.submit": "Register",
-    "register.success": "Registration Successful",
-    "register.success.description": "Your account has been created successfully.",
-    "register.name.required": "Please enter your name",
-    "register.email.required": "Please enter your email",
-    "register.email.valid": "Please enter a valid email address",
-    "register.password.required": "Please enter your password",
-    "register.password.min": "Password must be at least 6 characters",
-    "register.confirmPassword.required": "Please confirm your password",
-    "register.confirmPassword.match": "Passwords do not match!",
-    "register.address.valid": "Address must be a valid string",
-    "register.coordinates.valid": "Coordinates must be an array of two numbers",
-    "register.coordinates.latitude.required": "Please enter the latitude",
-    "register.coordinates.longitude.required": "Please enter the longitude",
-    "updateUser.name": "Name",
-    "updateUser.address": "Address",
-    "updateUser.coordinates": "Coordinates",
+    "register.submit": "Registrar",
+    "register.success": "Registro Bem-Sucedido",
+    "register.success.description": "Sua conta foi criada com sucesso.",
+    "register.name.required": "Por favor, insira seu nome",
+    "register.email.required": "Por favor, insira seu email",
+    "register.email.valid": "Por favor, insira um endereço de email válido",
+    "register.password.required": "Por favor, insira sua senha",
+    "register.password.min": "A senha deve ter pelo menos 6 caracteres",
+    "register.confirmPassword.required": "Por favor, confirme sua senha",
+    "register.confirmPassword.match": "As senhas não coincidem!",
+    "register.address.valid": "O endereço deve ser uma string válida",
+    "register.coordinates.valid": "As coordenadas devem ser um array de dois números",
+    "register.coordinates.latitude.required": "Por favor, insira a latitude",
+    "register.coordinates.longitude.required": "Por favor, insira a longitude",
+    "updateUser.name": "Nome",
+    "updateUser.address": "Endereço",
+    "updateUser.coordinates": "Coordenadas",
     "updateUser.latitude": "Latitude",
     "updateUser.longitude": "Longitude",
-    "updateUser.submit": "Update User",
-    "updateUser.success": "Update Successful",
-    "updateUser.success.description": "User information has been updated successfully.",
-    "updateUser.name.required": "Please enter your name",
-    "updateUser.address.valid": "Address must be a valid string",
-    "updateUser.coordinates.valid": "Coordinates must be an array of two numbers",
-    "updateUser.coordinates.latitude.required": "Please enter the latitude",
-    "updateUser.coordinates.longitude.required": "Please enter the longitude",
-    "region.name": "Name",
-    "region.type": "Type",
-    "region.coordinates": "Coordinates",
+    "updateUser.submit": "Atualizar Usuário",
+    "updateUser.success": "Atualização Bem-Sucedida",
+    "updateUser.success.description": "As informações do usuário foram atualizadas com sucesso.",
+    "updateUser.name.required": "Por favor, insira seu nome",
+    "updateUser.address.valid": "O endereço deve ser uma string válida",
+    "updateUser.coordinates.valid": "As coordenadas devem ser um array de dois números",
+    "updateUser.coordinates.latitude.required": "Por favor, insira a latitude",
+    "updateUser.coordinates.longitude.required": "Por favor, insira a longitude",
+    "region.name": "Nome",
+    "region.type": "Tipo",
+    "region.coordinates": "Coordenadas",
     "region.latitude": "Latitude",
     "region.longitude": "Longitude",
-    "region.submit": "Submit",
-    "region.success": "Region Created",
-    "region.success.description": "The region has been created successfully.",
-    "region.name.required": "Please enter the region name",
-    "region.type.required": "Please enter the region type",
-    "region.coordinates.valid": "Coordinates must be an array of arrays of two numbers",
-    "region.coordinates.latitude.required": "Please enter the latitude",
-    "region.coordinates.longitude.required": "Please enter the longitude",
-    "region.list": "Region List",
-    "region.details": "Region Details",
-    "region.fetchError": "Fetch Error",
-    "region.fetchError.description": "There was an error fetching the regions.",
-    "updateRegion.name": "Name",
-    "updateRegion.type": "Type",
-    "updateRegion.coordinates": "Coordinates",
+    "region.submit": "Enviar",
+    "region.success": "Região Criada",
+    "region.success.description": "A região foi criada com sucesso.",
+    "region.name.required": "Por favor, insira o nome da região",
+    "region.type.required": "Por favor, insira o tipo da região",
+    "region.coordinates.valid": "As coordenadas devem ser um array de arrays de dois números",
+    "region.coordinates.latitude.required": "Por favor, insira a latitude",
+    "region.coordinates.longitude.required": "Por favor, insira a longitude",
+    "region.list": "Lista de Regiões",
+    "region.details": "Detalhes da Região",
+    "region.fetchError": "Erro de Carregamento",
+    "region.fetchError.description": "Ocorreu um erro ao buscar as regiões.",
+    "updateRegion.name": "Nome",
+    "updateRegion.type": "Tipo",
+    "updateRegion.coordinates": "Coordenadas",
     "updateRegion.latitude": "Latitude",
     "updateRegion.longitude": "Longitude",
-    "updateRegion.submit": "Update Region",
-    "updateRegion.success": "Update Successful",
-    "updateRegion.success.description": "The region has been updated successfully.",
-    "updateRegion.name.required": "Please enter the region name",
-    "updateRegion.type.required": "Please enter the region type",
-    "updateRegion.coordinates.valid": "Coordinates must be an array of arrays of two numbers",
-    "updateRegion.coordinates.latitude.required": "Please enter the latitude",
-    "updateRegion.coordinates.longitude.required": "Please enter the longitude",
+    "updateRegion.submit": "Atualizar Região",
+    "updateRegion.success": "Atualização Bem-Sucedida",
+    "updateRegion.success.description": "A região foi atualizada com sucesso.",
+    "updateRegion.name.required": "Por favor, insira o nome da região",
+    "updateRegion.type.required": "Por favor, insira o tipo da região",
+    "updateRegion.coordinates.valid": "As coordenadas devem ser um array de arrays de dois números",
+    "updateRegion.coordinates.latitude.required": "Por favor, insira a latitude",
+    "updateRegion.coordinates.longitude.required": "Por favor, insira a longitude",
     "geoDistance.lat": "Latitude",
     "geoDistance.lng": "Longitude",
-    "geoDistance.maxDistance": "Max Distance",
-    "geoDistance.filterUserId": "Filter User ID",
-    "geoDistance.submit": "Submit",
-    "geoDistance.success": "Request Successful",
-    "geoDistance.success.description": "The request has been processed successfully.",
-    "geoDistance.lat.required": "Please enter the latitude",
-    "geoDistance.lng.required": "Please enter the longitude",
-    "geoDistance.maxDistance.required": "Please enter the max distance",
+    "geoDistance.maxDistance": "Distância Máxima",
+    "geoDistance.filterUserId": "Filtrar ID do Usuário",
+    "geoDistance.submit": "Enviar",
+    "geoDistance.success": "Requisição Bem-Sucedida",
+    "geoDistance.success.description": "A requisição foi processada com sucesso.",
+    "geoDistance.lat.required": "Por favor, insira a latitude",
+    "geoDistance.lng.required": "Por favor, insira a longitude",
+    "geoDistance.maxDistance.required": "Por favor, insira a distância máxima",
     "geoPoint.lat": "Latitude",
     "geoPoint.lng": "Longitude",
-    "geoPoint.submit": "Submit",
-    "geoPoint.success": "Request Successful",
-    "geoPoint.success.description": "The request has been processed successfully.",
-    "geoPoint.lat.required": "Please enter the latitude",
-    "geoPoint.lng.required": "Please enter the longitude"
+    "geoPoint.submit": "Enviar",
+    "geoPoint.success": "Requisição Bem-Sucedida",
+    "geoPoint.success.description": "A requisição foi processada com sucesso.",
+    "geoPoint.lat.required": "Por favor, insira a latitude",
+    "geoPoint.lng.required": "Por favor, insira a longitude"
 }
